# meel

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compact.Dockerfile  dev-compact-docker-compose.yml  dev-docker-compose.yml  diesel.toml  docker-compose.yml
.github/workflows/: ci-backend.yml  ci-sdk-node.yml  ci-tool-vscode.yml  ci.yml  docker-image.yml  release-backend.yml  release-sdk-node.yml  release.yml
backend/: Cargo.toml  diesel.toml
backend/migrations/2024-08-14-213309_mail_reply_to/: down.sql
backend/src/: mail_scheduler.rs  main.rs  server.rs  templating.rs
backend/src/routes/: mailing_lists.rs  mails.rs  mod.rs  templates.rs
backend/src/utils/: api_error.rs  extensions.rs  mod.rs  time.rs
crates/meel-backend/: .dockerignore  Cargo.toml
crates/meel-templating/: Cargo.toml
crates/meel-utils/: Cargo.toml
data/: .gitignore  globals.json
data/templates/: .gitignore
docker/: Dockerfile  dev-compact-docker-compose.yml  dev-docker-compose.yml  docker-compose.yml  full.Dockerfile
migrations/2024-06-20-153942_initial/: down.sql  up.sql
migrations/2024-06-23-145441_scheduled_at/: down.sql  up.sql
migrations/2024-07-03-154141_mailing_lists/: up.sql
migrations/2024-07-09-154536_mailing_list_subscriber_name/: down.sql  up.sql
migrations/2024-07-10-153432_mailing_list_delete_cascade/: up.sql
migrations/2024-08-14-213309_mail_reply_to/: up.sql
sdk/node/: .prettierignore  .prettierrc  (+8 more)
src/: components.rs  database.rs  mail_scheduler.rs  main.rs  models.rs  schema.rs  server.rs  templating.rs
(+52 files in other folders)
