[package]
name = "meel"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
regex = "1.10.5"
diesel = { version = "2.2.1", features = ["postgres"] }
dotenvy = "0.15"
axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
serde = { version = "1.0.203", features = ["derive"] }
chrono = "0.4.38"